fix some alignment issues in the task_list styles

--- a/app/assets/styles/app.less
+++ b/app/assets/styles/app.less
@@ -99,8 +99,7 @@ app-settings {
 
 @media screen and (max-width: 700px) {
     input.task-input { 
-        margin: 0 !important; 
-        width: 50%;
+        width: 40%;
     }
         
 }
