--- a/app/assets/styles/icons.less
+++ b/app/assets/styles/icons.less
@@ -28,8 +28,8 @@ i.add-list {
 
 i.add-task {
     position: absolute;
-    top: 21px;
-    left: 27px;
+    top: 27px;
+    left: 23px;
     color: rgb(24,24,24);
     opacity: 1;
     font-size: 2em;
